@startuml ClassDiagram_AppCore
skinparam defaultFontName Monospaced
skinparam shadowing false
skinparam linetype ortho
skinparam packageBackgroundColor #f9f9f9
skinparam packageBorderColor #aaaaaa
skinparam packageFontColor #666666
skinparam packageFontStyle bold
skinparam class {
  BackgroundColor<<interface>> #dae8fc
  BorderColor<<interface>>     #6c8ebf
  FontStyle<<interface>>       italic
  BackgroundColor<<abstract>>  #e1d5e7
  BorderColor<<abstract>>      #9673a6
  FontStyle<<abstract>>        italic
  BackgroundColor<<concrete>>  #fff2cc
  BorderColor<<concrete>>      #d6b656
  BackgroundColor<<manager>>   #d5e8d4
  BorderColor<<manager>>       #82b366
  BackgroundColor<<utility>>   #f5f5f5
  BorderColor<<utility>>       #666666
  FontColor<<utility>>         #333333
}

package "Application core" {
  interface IGraphicsApp <<interface>> {
    + Init() : bool
    + Update(in info : SUpdateInfo) : void
    + Render() : void
    + RenderGUI() : void
    + Clean() : void
    + KeyboardDown(in e : SDL_KeyboardEvent) : void
    + KeyboardUp(in e : SDL_KeyboardEvent) : void
    + MouseMove(in e : SDL_MouseMotionEvent) : void
    + MouseDown(in e : SDL_MouseButtonEvent) : void
    + MouseUp(in e : SDL_MouseButtonEvent) : void
    + MouseWheel(in e : SDL_MouseWheelEvent) : void
    + Resize(in w : int, in h : int) : void
    + OtherEvent(in e : SDL_Event) : void
  }
  class MyApp <<concrete>> {
    # m_commandQueue : CommandQueue
    # m_sceneManager : SceneManager
    # m_shaderManager : ShaderManager
    # m_materialManager : MaterialManager
    # m_textureManager : TextureManager
    # m_skyboxRenderer : unique_ptr<SkyboxRenderer>
    # m_axesRenderer : unique_ptr<AxesRenderer>
    # m_rendererVisitor : unique_ptr<OpenGLRendererVisitor>
    # m_techniques : map<string, shared_ptr<IRayMarchingTechnique>>
    # m_imguiVisitor : ImGuiVisitor
    # m_camera : Camera
    # m_cameraManipulator : CameraManipulator
    (+,#) m_windowSize : ivec2
    (+,!) m_elapsedTime : float
    --
    + Init() : bool
    + Update(in info : SUpdateInfo) : void
    + Render() : void
    + RenderGUI() : void
    + Clean() : void
    # SetupDebugCallback() : void
  }
}

class CommandQueue <<manager>> {
}
class SceneManager <<manager>> {
}
class ShaderManager <<manager>> {
}
class MaterialManager <<manager>> {
}
class TextureManager <<manager>> {
}
class SkyboxRenderer <<manager>> {
}
class AxesRenderer <<manager>> {
}
class OpenGLRendererVisitor <<manager>> {
}
class ImGuiVisitor <<concrete>> {
}
class Camera <<concrete>> {
}
class CameraManipulator <<utility>> {
}
interface IRayMarchingTechnique <<interface>> {
}

MyApp ..|> IGraphicsApp
MyApp *-- CommandQueue
MyApp *-- SceneManager
MyApp *-- ShaderManager
MyApp *-- MaterialManager
MyApp *-- TextureManager
MyApp *-- SkyboxRenderer
MyApp *-- AxesRenderer
MyApp *-- OpenGLRendererVisitor
MyApp *-- ImGuiVisitor
MyApp *-- Camera
MyApp *-- CameraManipulator
MyApp o-- "0..*" IRayMarchingTechnique
@enduml
